# honeybees

./: .buildinfo  .gitignore  README.md  ThirdPartyNotices.txt  agent_agent_interaction.html  agent_environment_interaction.html  artists.html  authors.html  authors_page.html  command_line_args.html  copyright.html  genindex.html  index.html  installation.html  introduction.html  model.html  objects.inv  py-modindex.html  pyproject.toml  reporting.html  search.html  searchindex.js  setup.py  visualisation.html
.github/workflows/: docs.yml  publish.yml  pytest.yml
_modules/: index.html
_modules/honeybees/: artists.html  reporter.html
_sources/: agent_agent_interaction.rst.txt  agent_environment_interaction.rst.txt  artists.rst.txt  authors.rst.txt  command_line_args.rst.txt  index.rst.txt  model.rst.txt  reporting.rst.txt  visualisation.rst.txt
docs/: conf.py  installation.rst  introduction.rst
examples/: agent_agent.py  agent_environment.py  config.yml  simple_model.py  visualisation.py
honeybees/: __init__.py  agents.py  area.py  argparse.py  artists.py  model.py  reporter.py
honeybees/visualization/: ModularVisualization.py  UserParam.py  canvas.py
honeybees/visualization/modules/: ChartVisualization.py  __init__.py
honeybees/visualization/templates/: modular_template.html
honeybees/visualization/templates/css/: bootstrap-slider.css
honeybees/visualization/templates/js/: ChartModule.js  (+2 more)
requirements/: docs.txt  requirements.txt  tests.txt
tests/: conftest.py  helpers.py  plot_benchmarks.py  run.bat  run.sh  test_general.py  testparam.py
