[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "honeybees"
dynamic = ['version']
description = "Honeybees is an agent-based modelling framework targeted at large-scale agent-based models."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
authors = [
    {name = "Jens de Bruijn", email = "j.a.debruijn@outlook.com"},
]
home-page = "http://github.com/jensdebruijn/honeybees"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "netcdf4",
    "pandas",
    "openpyxl",
    "geopandas",
    "numpy",
    "numba",
    "tornado",
    "python-dateutil",
    "rasterio",
    "pyyaml",
    "matplotlib",
    "xarray",
    "rioxarray",
    "zarr",
]

[project.optional-dependencies]
plotting = ["cartopy"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-autoprogram",
]
dev = [
    "matplotlib", 
    "pytest", 
    "pytest-plt", 
    "pytest-benchmark", 
    "cartopy",
    "ruff",
]